--- a/index.html
+++ b/index.html
@@ -2,270 +2,234 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Brainrot City INSANO</title>
+<title>STEAL BRAINROT TYCOON ULTRA</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-
 <style>
-body{margin:0;overflow:hidden;background:black;touch-action:none;font-family:Arial}
+body{margin:0;overflow:hidden;background:black;font-family:Arial}
 
-#ui{
+/* LOGIN */
+#loginScreen{
+position:fixed;
+inset:0;
+background:rgba(0,0,0,0.85);
+display:flex;
+align-items:center;
+justify-content:center;
+z-index:999;
+color:white;
+}
+
+#loginBox{
+background:#111;
+padding:20px;
+border-radius:15px;
+width:280px;
+text-align:center;
+}
+
+#loginBox input{
+width:100%;
+padding:8px;
+margin:6px 0;
+border-radius:6px;
+border:none;
+}
+
+#loginBox button{
+width:100%;
+padding:8px;
+margin-top:6px;
+border:none;
+border-radius:8px;
+background:#ffd700;
+font-weight:bold;
+}
+
+/* HUD */
+#uiBottom{
+position:fixed;
+bottom:10px;
+left:50%;
+transform:translateX(-50%);
+color:white;
+background:rgba(0,0,0,0.6);
+padding:12px 20px;
+border-radius:15px;
+display:flex;
+gap:20px;
+z-index:10;
+font-size:16px;
+}
+
+/* Loja */
+#shop{
 position:fixed;
 top:10px;
-left:10px;
+right:10px;
+background:rgba(0,0,0,0.6);
 color:white;
-background:rgba(0,0,0,0.5);
-padding:10px;
+padding:12px;
 border-radius:12px;
-font-size:16px;
 z-index:10;
 }
 
-#joystickBase{
-position:fixed;
-bottom:80px;
-left:40px;
-width:120px;
-height:120px;
-background:rgba(255,255,255,0.1);
-border-radius:50%;
-z-index:10;
-}
-
-#joystick{
-position:absolute;
-width:60px;
-height:60px;
-left:30px;
-top:30px;
-background:rgba(255,255,255,0.4);
-border-radius:50%;
-}
-
-#stealBtn{
-position:fixed;
-bottom:120px;
-right:30px;
-width:80px;
-height:80px;
-border-radius:50%;
-background:rgba(255,0,0,0.4);
-color:white;
-font-size:30px;
-text-align:center;
-line-height:80px;
-z-index:10;
-}
+button{cursor:pointer}
 </style>
 </head>
 <body>
 
-<div id="ui">
-💰 <span id="money">0</span><br>
-🧠 <span id="steals">0</span>
+<!-- LOGIN -->
+<div id="loginScreen">
+  <div id="loginBox">
+    <h3>👤 Cadastro</h3>
+    <input id="user" placeholder="Usuário">
+    <input id="pass" type="password" placeholder="Senha">
+    <button onclick="register()">Cadastrar</button>
+    <button onclick="login()">Entrar</button>
+    <p id="loginMsg"></p>
+  </div>
 </div>
 
-<div id="joystickBase">
-<div id="joystick"></div>
+<!-- LOJA -->
+<div id="shop">
+🛒 LOJA ⭐<br>
+<button onclick="buySpeed()">⚡ +Velocidade (⭐10)</button>
+<button onclick="buyMoney()">💰 +Dinheiro (⭐15)</button>
 </div>
 
-<div id="stealBtn">🧠</div>
+<!-- HUD -->
+<div id="uiBottom">
+💰 <span id="money">0</span>
+⭐ <span id="stars">0</span>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
 <script>
-// DETECTAR DISPOSITIVO
-const isMobile = /Android|iPhone|iPad/i.test(navigator.userAgent);
-if(!isMobile){
-  document.getElementById("joystickBase").style.display="none";
-  document.getElementById("stealBtn").style.display="none";
+/* ================= LOGIN ================= */
+let logged = localStorage.getItem("logged") === "true";
+
+function register(){
+  const u=user.value, p=pass.value;
+  if(!u||!p){loginMsg.innerText="Preencha tudo";return;}
+  localStorage.setItem("acc_user",u);
+  localStorage.setItem("acc_pass",p);
+  loginMsg.innerText="Conta criada! Agora entra.";
 }
 
-// CENA
-const scene = new THREE.Scene();
-scene.background = new THREE.Color(0x87ceeb);
+function login(){
+  if(user.value===localStorage.getItem("acc_user") &&
+     pass.value===localStorage.getItem("acc_pass")){
+    localStorage.setItem("logged","true");
+    logged=true;
+    loginScreen.style.display="none";
+  }else{
+    loginMsg.innerText="Usuário ou senha errados";
+  }
+}
 
-const camera = new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,1000);
-const renderer = new THREE.WebGLRenderer({antialias:true});
+if(logged) loginScreen.style.display="none";
+
+/* ================= DADOS ================= */
+let beltSpeed=parseFloat(localStorage.getItem("beltSpeed"))||0.12;
+let moneyGain=parseInt(localStorage.getItem("moneyGain"))||25;
+let money=parseInt(localStorage.getItem("money"))||0;
+let stars=parseInt(localStorage.getItem("stars"))||0;
+
+function updateUI(){
+money.innerText=money;
+stars.innerText=stars;
+}
+updateUI();
+
+function save(){
+localStorage.setItem("money",money);
+localStorage.setItem("stars",stars);
+localStorage.setItem("beltSpeed",beltSpeed);
+localStorage.setItem("moneyGain",moneyGain);
+}
+
+/* ================= CENA ================= */
+const scene=new THREE.Scene();
+scene.background=new THREE.Color(0x87ceeb);
+
+const camera=new THREE.PerspectiveCamera(75,innerWidth/innerHeight,0.1,1000);
+const renderer=new THREE.WebGLRenderer({antialias:true});
 renderer.setSize(innerWidth,innerHeight);
 document.body.appendChild(renderer.domElement);
 
 scene.add(new THREE.AmbientLight(0xffffff,0.7));
-const light = new THREE.DirectionalLight(0xffffff,1);
+const light=new THREE.DirectionalLight(0xffffff,1);
 light.position.set(5,10,5);
 scene.add(light);
 
-// CHÃO
-const floor = new THREE.Mesh(
-new THREE.PlaneGeometry(300,300),
+/* chão */
+const floor=new THREE.Mesh(
+new THREE.PlaneGeometry(400,400),
 new THREE.MeshStandardMaterial({color:0x3cb371})
 );
 floor.rotation.x=-Math.PI/2;
 scene.add(floor);
 
-// PRÉDIOS
-for(let i=0;i<20;i++){
-let h=Math.random()*10+5;
-const building = new THREE.Mesh(
-new THREE.BoxGeometry(4,h,4),
-new THREE.MeshStandardMaterial({color:0x888888})
+/* esteira */
+const belt=new THREE.Mesh(
+new THREE.BoxGeometry(50,0.5,5),
+new THREE.MeshStandardMaterial({color:0x333333})
 );
-building.position.set(Math.random()*100-50,h/2,Math.random()*100-50);
-scene.add(building);
-}
+belt.position.set(0,1,0);
+scene.add(belt);
 
-// PLAYER
-const player = new THREE.Mesh(
-new THREE.BoxGeometry(1,2,1),
-new THREE.MeshStandardMaterial({color:0x0000ff})
+/* coletor */
+const collector=new THREE.Mesh(
+new THREE.BoxGeometry(5,0.5,5),
+new THREE.MeshStandardMaterial({color:0xffff00})
 );
-player.position.y=1;
-scene.add(player);
+collector.position.set(-25,1,0);
+scene.add(collector);
 
-// BRAINROTS
+/* brainrots */
 let brainrots=[];
-for(let i=0;i<10;i++){
+setInterval(()=>{
 const b=new THREE.Mesh(
 new THREE.SphereGeometry(1,32,32),
 new THREE.MeshStandardMaterial({color:Math.random()*0xffffff})
 );
-b.position.set(Math.random()*80-40,1,Math.random()*80-40);
+b.position.set(25,2,0);
 scene.add(b);
 brainrots.push(b);
+},2000);
+
+/* LOJA */
+function buySpeed(){
+if(stars>=10){stars-=10;beltSpeed+=0.03;save();updateUI();}
+}
+function buyMoney(){
+if(stars>=15){stars-=15;moneyGain+=10;save();updateUI();}
 }
 
-// POLÍCIA
-const police=new THREE.Mesh(
-new THREE.BoxGeometry(1,2,1),
-new THREE.MeshStandardMaterial({color:0xff0000})
-);
-police.position.set(15,1,15);
-scene.add(police);
-
-// PROGRESSO
-let money=parseInt(localStorage.getItem("money"))||0;
-let steals=parseInt(localStorage.getItem("steals"))||0;
-updateUI();
-
-function updateUI(){
-document.getElementById("money").innerText=money;
-document.getElementById("steals").innerText=steals;
-}
-
-// ===== CONTROLES MOBILE =====
-let joyX=0, joyY=0;
-let camAngle=0;
-
-if(isMobile){
-const joystick=document.getElementById("joystick");
-const base=document.getElementById("joystickBase");
-
-base.addEventListener("touchmove",(e)=>{
-let rect=base.getBoundingClientRect();
-let x=e.touches[0].clientX-rect.left-60;
-let y=e.touches[0].clientY-rect.top-60;
-let dist=Math.sqrt(x*x+y*y);
-if(dist>40){x=x/dist*40;y=y/dist*40;}
-joystick.style.left=30+x+"px";
-joystick.style.top=30+y+"px";
-joyX=x/40;
-joyY=y/40;
-});
-
-base.addEventListener("touchend",()=>{
-joystick.style.left="30px";
-joystick.style.top="30px";
-joyX=0; joyY=0;
-});
-
-document.addEventListener("touchmove",(e)=>{
-camAngle += (e.touches[0].movementX||0)*0.002;
-});
-
-document.getElementById("stealBtn").addEventListener("touchstart",stealBrainrot);
-}
-
-// ===== CONTROLES PC =====
-let keys={};
-document.addEventListener("keydown",e=>keys[e.key.toLowerCase()]=true);
-document.addEventListener("keyup",e=>keys[e.key.toLowerCase()]=false);
-
-let mouseDown=false;
-let lastX=0;
-
-document.addEventListener("mousedown",e=>{
-mouseDown=true;
-lastX=e.clientX;
-});
-document.addEventListener("mouseup",()=>mouseDown=false);
-document.addEventListener("mousemove",e=>{
-if(mouseDown){
-camAngle+=(e.clientX-lastX)*0.005;
-lastX=e.clientX;
-}
-});
-
-document.addEventListener("keydown",e=>{
-if(e.key.toLowerCase()==="e") stealBrainrot();
-});
-
-// ROUBAR
-function stealBrainrot(){
-brainrots.forEach(b=>{
-if(player.position.distanceTo(b.position)<2){
-money+=50;
-steals++;
-localStorage.setItem("money",money);
-localStorage.setItem("steals",steals);
-updateUI();
-b.position.set(Math.random()*80-40,1,Math.random()*80-40);
-}
-});
-}
-
-// LOOP
+/* LOOP */
 function animate(){
 requestAnimationFrame(animate);
 
-let speed = keys["shift"]?0.5:0.25;
-
-if(isMobile){
-player.position.x+=joyX*0.3;
-player.position.z+=joyY*0.3;
-}else{
-if(keys["w"]) player.position.z-=speed;
-if(keys["s"]) player.position.z+=speed;
-if(keys["a"]) player.position.x-=speed;
-if(keys["d"]) player.position.x+=speed;
+brainrots.forEach((b,i)=>{
+b.position.x-=beltSpeed;
+b.rotation.y+=0.05;
+if(b.position.x<-25){
+  if(logged){
+    money+=moneyGain;
+    stars+=1;
+    save();updateUI();
+  }
+  scene.remove(b);
+  brainrots.splice(i,1);
 }
+});
 
-// câmera 3ª pessoa
-camera.position.x=player.position.x+Math.sin(camAngle)*6;
-camera.position.z=player.position.z+Math.cos(camAngle)*6;
-camera.position.y=player.position.y+4;
-camera.lookAt(player.position);
-
-// polícia persegue
-police.position.x+=(player.position.x-police.position.x)*0.02;
-police.position.z+=(player.position.z-police.position.z)*0.02;
-
-if(player.position.distanceTo(police.position)<1.5){
-alert("🚔 VOCÊ FOI PRESO!");
-money=0;steals=0;
-localStorage.clear();
-updateUI();
-player.position.set(0,1,0);
-}
-
-brainrots.forEach(b=>b.rotation.y+=0.05);
+camera.position.set(0,10,15);
+camera.lookAt(0,0,0);
 renderer.render(scene,camera);
 }
 animate();
-
-window.addEventListener("resize",()=>{
-camera.aspect=innerWidth/innerHeight;
-camera.updateProjectionMatrix();
-renderer.setSize(innerWidth,innerHeight);
-});
 </script>
 </body>
 </html>
